@@ -87,7 +87,7 @@ AC_SUBST(GECKO_IDLDIR)
 
 
 
-PKG_CHECK_MODULES(DBUS, [dbus-1 >= 0.95])
+PKG_CHECK_MODULES(DBUS, [dbus-1 >= 0.95 dbus-glib-1])
 AC_SUBST(DBUS_CFLAGS)
 AC_SUBST(DBUS_LIBS)
 
